Moved into separate files as binding seems to be done for now.

--- a/VialF/VialF.fsproj
+++ b/VialF/VialF.fsproj
@@ -49,6 +49,8 @@
   <ItemGroup>
     <Compile Include="Util.fs" />
     <Compile Include="Scope.fs" />
+    <Compile Include="Model.fs" />
+    <Compile Include="Bind.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
   </ItemGroup>
