--- a/VialF/VialF.fsproj
+++ b/VialF/VialF.fsproj
@@ -51,6 +51,7 @@
     <Compile Include="Scope.fs" />
     <Compile Include="Model.fs" />
     <Compile Include="Bind.fs" />
+    <Compile Include="Execute.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
   </ItemGroup>
